--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.7",
     "mobx": "^6.6.1",
     "next": "12.2.5",
     "react": "18.2.0",
