--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
+    "express": "^4.18.1",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sqlite3": "^5.1.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
