--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
